Integrated eco api